<resources>
    <string name="app_name">HealthcareService</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="email">Email cím</string>
    <string name="passwordAgain">Jelszó megerősítése</string>
    <string name="cancel">Vissza</string>
    <string name="advertise">Szolgáltatások hírdetése</string>
    <string name="useServices">Szolgáltatások igénybevétele</string>
    <string name="loginWithGoogle">Bejelentkezés Google fiókkal</string>
    <string name="loginAsGuest">Bejelentkezés vendégként</string>
    <string name="save">Mentés</string>
    <string name="delete">Töltés</string>
    <string name="add_item">Szolgáltatás hozzáadása</string>
    <string name="service_name">Szolgáltatás név</string>
    <string name="provider">Szolgáltató</string>
    <string name="communal">Közösségi</string>
    <string name="private_service">Magán</string>
    <string name="active">Aktív</string>
    <string name="comment">Megjegyzés</string>
    <string name="deleteItem">Törlés</string>
    <string name="updateItem">Szerkesztés</string>

    <string-array name="service_item_names">
        <item>Fogorvos</item>
        <item>Fül-orr-gészészeti szakrendelés</item>
        <item>Ortopédusi szakrendelés</item>
        <item>Gyógyszer tanácsadási szakrendelés</item>
        <item>Dietetikusi szakrendelés</item>
        <item>Belgyógyászati szakrendelés</item>
        <item>Plasztikai sebészet</item>
        <item>Szamészet</item>
        <item>Urulógiai szakrendelés</item>
        <item>Szájsebészet</item>
    </string-array>

    <string-array name="service_item_providers">
        <item>Fogorvos Kft.</item>
        <item>FOG Kft.</item>
        <item>OSZ Kft.</item>
        <item>GYTSZ Kft.</item>
        <item>DSZ Kft.</item>
        <item>BSZ Kft.</item>
        <item>PS Kft.</item>
        <item>Szemet-Szemért Kft.</item>
        <item>USZ Kft.</item>
        <item>Fájni-Fog Kft.</item>
    </string-array>

    <string-array name="service_item_comments">
        <item>HealthCareService</item>
        <item>HealthCareService</item>
        <item>HealthCareService</item>
        <item>HealthCareService</item>
        <item>HealthCareService</item>
        <item>HealthCareService</item>
        <item>HealthCareService</item>
        <item>HealthCareService</item>
        <item>HealthCareService</item>
        <item>HealthCareService</item>
    </string-array>

    <string-array name="service_item_categories">
        <item>Health,Service</item>
        <item>Health,Service</item>
        <item>Health,Service</item>
        <item>Health,Service</item>
        <item>Health,Service</item>
        <item>Health,Service</item>
        <item>Health,Service</item>
        <item>Health,Service</item>
        <item>Health,Service</item>
        <item>Health,Service</item>
    </string-array>

    <string-array name="service_item_actives">
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
    </string-array>

    <string-array name="service_item_appointment">
        <item>false</item>
        <item>false</item>
        <item>false</item>
        <item>false</item>
        <item>false</item>
        <item>false</item>
        <item>false</item>
        <item>false</item>
        <item>false</item>
        <item>false</item>
    </string-array>

    <string-array name="service_item_extra_details">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

    <array name="service_item_images">
        <item>@drawable/healthcare</item>
        <item>@drawable/healthcare</item>
        <item>@drawable/healthcare</item>
        <item>@drawable/healthcare</item>
        <item>@drawable/healthcare</item>
        <item>@drawable/healthcare</item>
        <item>@drawable/healthcare</item>
        <item>@drawable/healthcare</item>
        <item>@drawable/healthcare</item>
        <item>@drawable/healthcare</item>
    </array>
</resources>